syntax = "proto3";

package mailer;

option go_package = "../internal/pb";

service MailerService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string from_name = 1;
  string from_email = 2;
  string to_email = 3;
  string subject = 4;
  string html_body = 5;
}

message SendEmailResponse {
  string status = 1;
  string message = 2;
}
